# devops-final-project

./: README.md  progress.md
ansible/: ansible.cfg
ansible/inventory/: hosts.ini
ansible/playbooks/: configure-eks.yml
cli/: pyproject.toml
cli/sawectl/: sawectl.py
cli/tests/: test_sawectl.py
docker/: cli.Dockerfile  engine.Dockerfile  jenkins.Dockerfile
engine/: CHECKLIST.md
engine/modules/slack_module/: slack.py
jenkins/: Jenkinsfile.cd  Jenkinsfile.cli-ci  Jenkinsfile.engine-ci  cli.Jenkinsfile  engine.Jenkinsfile
jenkins/shared/: bump-version.sh  detect-changes.sh
k8s/: configmap.yaml  ingress.yaml  secret.yaml  service.yaml  statefulset.yaml
monitoring/: dashboard-configmap.yaml  install.sh  uninstall.sh  values-prometheus.yaml
terraform/: .gitignore  backend.tf  eks.tf  outputs.tf  providers.tf  variables.tf  vpc.tf
tests/: test_engine_smoke.py
